# llm-workshop

./: .gitignore  requirements.txt
01-embeddings/: README.md  exercise-01.py  requirements.txt
02-vector-stores/: README.md  exercise-02-search.py  exercise-02-setup.py  exercise-02.py  requirements.txt
03-mcp/: README.md  pyproject.toml
03-mcp/mcp_exercise/: server.py
04-rag/: README.md  pyproject.toml
04-rag/mcp_rag/: server.py
