[project]
name = "mcp-exercise"
version = "0.1.0"
description = "A simple MCP server exposing Rova's garbage collection schedule"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["anyio>=4.5", "click>=8.1.0", "httpx>=0.27", "mcp"]

[project.scripts]
mcp-exercise = "mcp_exercise.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_exercise"]

[tool.pyright]
include = ["mcp_exercise"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
